--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
 group = 'com.ekyrizky' // Replace with your GitHub username
 version = '1.0.0'
 
+task assemble {
+    dependsOn 'publishToMavenLocal'
+}
+
 publishing {
     publications {
         mavenAar(MavenPublication) {
@@ -13,14 +17,13 @@ publishing {
             version = '1.0.0'
 
             // Add the AAR file as the primary artifact
-            artifact file('flutter_release.1.0.aar')
+            artifact file('flutter_release-1.0.aar')
 
             // Optional: Attach the POM file if it's required
             pom.withXml {
                 asNode().appendNode('description', 'Flutter module as Android library')
-                asNode().appendNode('name', 'Flutter SDK') 
-                asNode().appendNode('url', 'https://https://github.com/ekyrizky/teleflutter')
-                
+                asNode().appendNode('name', 'Flutter SDK')
+                asNode().appendNode('url', 'https://github.com/ekyrizky/teleflutter')
             }
         }
     }
